--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -373,6 +373,10 @@ header p {
   margin: 0 0 1.5em 0;
 }
 
+header {
+  font-family: 'Athiti', sans-serif;
+}
+
 header h2 + p {
   font-size: 1.25em;
   margin-top: -1em;
