--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 @import 'variables';
 @import '../node_modules/font-awesome/scss/font-awesome';
+@import url('https://fonts.googleapis.com/css?family=Athiti');
 
 body, html {
   padding: 0;
